--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   internet_connection_checker: ^1.0.0+1
   flutter_svg: ^2.0.5
   font_awesome_flutter: ^10.4.0
+  flutter_markdown: ^0.6.14
 
 dev_dependencies:
   flutter_test:
