--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-BASE_URL = https://back.hello-bible.my-preprod.space/api
+# BASE_URL = https://back.hello-bible.my-preprod.space/api
+BASE_URL = https://api.gpt-demo.my-preprod.space/api
