--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   internet_connection_checker: ^1.0.0+1
   flutter_svg: ^2.0.5
   font_awesome_flutter: ^10.4.0
+  cached_network_image: ^3.2.3
+  webview_flutter: ^4.2.0
 
 dev_dependencies:
   flutter_test:
