--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,9 @@ dependencies:
   font_awesome_flutter: ^10.4.0
   cached_network_image: ^3.2.3
   webview_flutter: ^4.2.0
+  flutter_secure_storage: ^8.0.0
+  shared_preferences: ^2.1.0
+  flutter_markdown: ^0.6.14
   # flutter_native_splash: ^2.2.19
 
 dev_dependencies:
