--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,9 @@ dependencies:
   flutter_secure_storage: ^8.0.0
   shared_preferences: ^2.1.0
   flutter_markdown: ^0.6.14
+  go_router: ^7.0.0
+  flutter_multi_formatter: ^2.10.4
+  # formz: ^0.6.0
   # flutter_native_splash: ^2.2.19
 
 dev_dependencies:
