--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,9 @@ dependencies:
   shared_preferences: ^2.1.0
   flutter_markdown: ^0.6.14
   go_router: ^7.0.0
-  flutter_multi_formatter: ^2.10.4
+  # flutter_multi_formatter: ^2.10.4
+  # dropdown_button2: ^2.1.0
+  flutter_typeahead: ^4.3.8
   # formz: ^0.6.0
   # flutter_native_splash: ^2.2.19
 
