--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   # flutter_multi_formatter: ^2.10.4
   # dropdown_button2: ^2.1.0
   flutter_typeahead: ^4.3.8
+  flutter_tts: ^3.6.3
+  # text_to_speech: ^0.2.3
   # formz: ^0.6.0
   # flutter_native_splash: ^2.2.19
 
