--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   # dropdown_button2: ^2.1.0
   flutter_typeahead: ^4.3.8
   flutter_tts: ^3.6.3
+  firebase_messaging: ^14.6.1
   # text_to_speech: ^0.2.3
   # formz: ^0.6.0
   # flutter_native_splash: ^2.2.19
