--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,14 +30,11 @@ dependencies:
   shared_preferences: ^2.1.0
   flutter_markdown: ^0.6.14
   go_router: ^7.0.0
-  # flutter_multi_formatter: ^2.10.4
-  # dropdown_button2: ^2.1.0
   flutter_typeahead: ^4.3.8
-  flutter_tts: ^3.6.3
+  # flutter_tts: ^3.6.3
   firebase_messaging: ^14.6.1
-  # text_to_speech: ^0.2.3
-  # formz: ^0.6.0
-  # flutter_native_splash: ^2.2.19
+  logger: ^1.3.0
+  flutter_local_notifications: ^14.1.0
 
 dev_dependencies:
   flutter_test:
@@ -61,15 +58,3 @@ flutter:
           weight: 500
         - asset: assets/fonts/poppins/Poppins-Light.ttf
           weight: 300
-
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
