add registration logic

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 # BASE_URL = https://back.hello-bible.my-preprod.space/api
-BASE_URL = https://api.gpt-demo.my-preprod.space/api
+# BASE_URL = https://api.gpt-demo.my-preprod.space/api
+BASE_URL = https://hellobox-api-test.my-preprod.space/api
