--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,12 +35,17 @@ dependencies:
   firebase_messaging: ^14.6.1
   logger: ^1.3.0
   flutter_local_notifications: ^14.1.0
+  objectbox: ^2.0.0
+  objectbox_flutter_libs: any
+  path_provider: ^2.0.15
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^2.0.0
+  build_runner: ^2.3.3
+  objectbox_generator: any
 
 flutter:
   uses-material-design: true
