--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   objectbox: ^2.0.0
   objectbox_flutter_libs: any
   path_provider: ^2.0.15
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
