--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -77,5 +77,5 @@ dependencies {
     implementation 'androidx.window:window:1.0.0'
     implementation 'androidx.window:window-java:1.0.0'
     implementation 'androidx.fragment:fragment:1.3.0'
-
+    implementation 'com.stripe:stripe-android:17.1.1'
 }
