add code verification

--- a/ios/Runner/Info-Debug.plist
+++ b/ios/Runner/Info-Debug.plist
@@ -71,5 +71,7 @@
 		<false/>
 		<key>FirebaseAppDelegateProxyEnabled</key>
 		<true/>
+		<key>UIStatusBarHidden</key>
+		<false/>
 	</dict>
 </plist>
