--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   path_provider: ^2.0.15
   intl: ^0.17.0
   flutter_stripe: ^9.2.0
+  flutter_native_splash: ^2.3.0
+  timezone: ^0.9.2
 
 dev_dependencies:
   flutter_test:
@@ -48,6 +50,19 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   build_runner: ^2.3.3
   objectbox_generator: any
+
+flutter_native_splash:
+  # color: "#27352A"
+  # image: assets/images/splash.png
+  background_image: assets/images/splash.png
+  info_plist_files:
+    ["ios/Runner/Info-Debug.plist", "ios/Runner/Info-Release.plist"]
+
+  android_12:
+    image: assets/images/splash.png
+    icon_background_color: "#27352A"
+    # image_dark: assets/logo-development.png
+    # icon_background_color_dark: "#121212"
 
 flutter:
   uses-material-design: true
