--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,12 +22,12 @@ dependencies:
   bubble: ^1.2.1
   lottie: ^2.3.2
   internet_connection_checker: ^1.0.0+1
-  flutter_svg: ^2.0.5
+  flutter_svg: ^2.0.7
   font_awesome_flutter: ^10.4.0
   cached_network_image: ^3.2.3
   webview_flutter: ^4.2.0
   flutter_secure_storage: ^8.0.0
-  shared_preferences: ^2.1.0
+  shared_preferences: ^2.1.2
   flutter_markdown: ^0.6.14
   go_router: ^7.0.0
   flutter_typeahead: ^4.3.8
@@ -42,6 +42,7 @@ dependencies:
   flutter_stripe: ^9.2.0
   flutter_native_splash: ^2.3.0
   timezone: ^0.9.2
+  dots_indicator: ^3.0.0
 
 dev_dependencies:
   flutter_test:
@@ -80,3 +81,22 @@ flutter:
           weight: 500
         - asset: assets/fonts/poppins/Poppins-Light.ttf
           weight: 300
+
+    - family: SfProText
+      fonts:
+        - asset: assets/fonts/sf_pro_text/sf_pro_text_regular.otf
+          style: normal
+        - asset: assets/fonts/sf_pro_text/sf_pro_text_black_italic.otf
+          style: italic
+        - asset: assets/fonts/sf_pro_text/sf_pro_text_heavy.otf
+          weight: 900
+        - asset: assets/fonts/sf_pro_text/sf_pro_text_bold.otf
+          weight: 700
+        - asset: assets/fonts/sf_pro_text/sf_pro_text_semibold.otf
+          weight: 500
+        - asset: assets/fonts/sf_pro_text/sf_pro_text_light.otf
+          weight: 300
+        - asset: assets/fonts/sf_pro_text/sf_pro_text_thin.otf
+          weight: 200
+        - asset: assets/fonts/sf_pro_text/sf_pro_text_ultralight.otf
+          weight: 100
