--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_native_splash: ^2.3.0
   timezone: ^0.9.2
   dots_indicator: ^3.0.0
+  image_picker: ^0.8.8
 
 dev_dependencies:
   flutter_test:
