--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,17 +23,17 @@ dependencies:
   lottie: ^2.3.2
   internet_connection_checker: ^1.0.0+1
   flutter_svg: ^2.0.7
-  font_awesome_flutter: ^10.4.0
+  # font_awesome_flutter: ^10.4.0
   cached_network_image: ^3.2.3
   webview_flutter: ^4.2.0
   flutter_secure_storage: ^8.0.0
   shared_preferences: ^2.1.2
-  flutter_markdown: ^0.6.14
+  # flutter_markdown: ^0.6.14
   go_router: ^7.0.0
   flutter_typeahead: ^4.3.8
   # flutter_tts: ^3.6.3
   firebase_messaging: ^14.6.1
-  logger: ^1.3.0
+
   flutter_local_notifications: ^14.1.0
   objectbox: ^2.0.0
   objectbox_flutter_libs: any
@@ -44,6 +44,7 @@ dependencies:
   timezone: ^0.9.2
   dots_indicator: ^3.0.0
   image_picker: ^0.8.8
+  jwt_decoder: ^2.0.1
 
 dev_dependencies:
   flutter_test:
@@ -51,6 +52,7 @@ dev_dependencies:
 
   flutter_lints: ^2.0.0
   build_runner: ^2.3.3
+  logger: ^1.3.0
   objectbox_generator: any
 
 # flutter_native_splash:
