--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   image_picker: ^0.8.8
   jwt_decoder: ^2.0.1
   flutter_screenutil: ^5.8.4
+  sign_in_with_apple: ^5.0.0
 
 dev_dependencies:
   flutter_test:
