--- a/ios/Runner/Info-Release.plist
+++ b/ios/Runner/Info-Release.plist
@@ -39,6 +39,18 @@
 		<array>
 			<string>_dartobservatory._tcp</string>
 		</array>
+		<key>CFBundleURLTypes</key>
+		<array>
+			<dict>
+				<key>CFBundleTypeRole</key>
+				<string>Editor</string>
+				<key>CFBundleURLSchemes</key>
+				<array>
+					<!-- Copied from GoogleService-Info.plist key REVERSED_CLIENT_ID -->
+					<string>com.googleusercontent.apps.994190058581-dfqg6r9qac823ivv8gut94bs2t6ojpq9</string>
+				</array>
+			</dict>
+		</array>
 		<key>NSLocalNetworkUsageDescription</key>
 		<string>${PRODUCT_NAME} uses the local network to discover Cast-enabled devices on your WiFi network.</string>
 		<key>UIApplicationSupportsIndirectInputEvents</key>
