--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   jwt_decoder: ^2.0.1
   flutter_screenutil: ^5.8.4
   sign_in_with_apple: ^5.0.0
+  google_sign_in: ^6.1.4
 
 dev_dependencies:
   flutter_test:
