--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   flutter_screenutil: ^5.8.4
   sign_in_with_apple: ^5.0.0
   google_sign_in: ^6.1.4
+  flutter_facebook_auth: ^5.0.11
 
 dev_dependencies:
   flutter_test:
