--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,10 +46,11 @@ dependencies:
   dots_indicator: ^3.0.0
   image_picker: ^0.8.8
   jwt_decoder: ^2.0.1
-  flutter_screenutil: ^5.8.4
+  # flutter_screenutil: ^5.8.4
   sign_in_with_apple: ^5.0.0
   google_sign_in: ^6.1.4
   flutter_facebook_auth: ^5.0.11
+  flutter_screenutil: ^5.8.4
 
 dev_dependencies:
   flutter_test:
