--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   google_sign_in: ^6.1.4
   flutter_facebook_auth: ^5.0.11
   flutter_screenutil: ^5.8.4
+  file_picker: ^5.3.2
 
 dev_dependencies:
   flutter_test:
