--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   objectbox: ^2.0.0
   objectbox_flutter_libs: any
   path_provider: ^2.0.15
-  intl: ^0.17.0
+  intl: ^0.18.0
   flutter_stripe: ^9.2.0
   # flutter_native_splash: ^2.3.0
   timezone: ^0.9.2
@@ -52,6 +52,8 @@ dependencies:
   flutter_facebook_auth: ^5.0.11
   flutter_screenutil: ^5.8.4
   file_picker: ^5.3.2
+  flutter_localizations:
+    sdk: flutter
 
 dev_dependencies:
   flutter_test:
@@ -77,6 +79,7 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  generate: true
 
   # To add assets to your application, add an assets section, like this:
   assets:
