--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   file_picker: ^5.3.2
   flutter_localizations:
     sdk: flutter
+  firebase_crashlytics: ^3.3.3
 
 dev_dependencies:
   flutter_test:
