--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   firebase_crashlytics: ^3.3.3
+  permission_handler: ^10.4.1
 
 dev_dependencies:
   flutter_test:
