--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
 
   cupertino_icons: ^1.0.2
   flutter_bloc: ^8.1.2
-  flutter_chat_ui: ^1.6.6
+  # flutter_chat_ui: ^1.6.6
   equatable: ^2.0.5
   get_it: ^7.2.0
   dio: ^5.1.1
@@ -56,6 +56,16 @@ dependencies:
     sdk: flutter
   firebase_crashlytics: ^3.3.3
   permission_handler: ^10.4.1
+
+  flutter_chat_types: ^3.6.1
+  flutter_link_previewer: ^3.2.1
+  flutter_parsed_text: ^2.2.1
+  meta: ^1.9.1
+  photo_view: ^0.14.0
+  scroll_to_index: ^3.0.1
+  url_launcher: ^6.1.11
+  visibility_detector: ^0.4.0+2
+  diffutil_dart: ^3.0.0
 
 dev_dependencies:
   flutter_test:
