--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,8 @@ dependencies:
   url_launcher: ^6.1.11
   visibility_detector: ^0.4.0+2
   diffutil_dart: ^3.0.0
+  animate_do: ^3.0.2
+  # scrollview_observer: ^1.14.2
 
 dev_dependencies:
   flutter_test:
