--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,14 +58,14 @@ dependencies:
   permission_handler: ^10.4.1
 
   flutter_chat_types: ^3.6.1
-  flutter_link_previewer: ^3.2.1
-  flutter_parsed_text: ^2.2.1
+  # flutter_link_previewer: ^3.2.1
+  # flutter_parsed_text: ^2.2.1
   meta: ^1.9.1
   photo_view: ^0.14.0
-  scroll_to_index: ^3.0.1
+  # scroll_to_index: ^3.0.1
   url_launcher: ^6.1.11
-  visibility_detector: ^0.4.0+2
-  diffutil_dart: ^3.0.0
+  # visibility_detector: ^0.4.0+2
+  # diffutil_dart: ^3.0.0
   animate_do: ^3.0.2
   # scrollview_observer: ^1.14.2
 
@@ -100,6 +100,7 @@ flutter:
     - .env
     - assets/images/
     - assets/icons/
+    - assets/lotties/
   fonts:
     - family: Poppins
       fonts:
