--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,7 @@ dependencies:
   focused_menu: ^1.0.5
   share_plus: ^7.0.2
   selectable: ^0.3.0
+  flutter_tts: ^3.7.0
   # focused_menu_custom: ^1.2.0
   # scrollview_observer: ^1.14.2
 
