--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,7 +50,7 @@ dependencies:
   sign_in_with_apple: ^5.0.0
   google_sign_in: ^6.1.4
   flutter_facebook_auth: ^5.0.11
-  flutter_screenutil: ^5.8.4
+  #flutter_screenutil: ^5.8.4
   file_picker: ^5.3.2
   flutter_localizations:
     sdk: flutter
