--- a/ios/Runner/Info-Release.plist
+++ b/ios/Runner/Info-Release.plist
@@ -7,7 +7,7 @@
 		<key>CFBundleDevelopmentRegion</key>
 		<string>$(DEVELOPMENT_LANGUAGE)</string>
 		<key>CFBundleDisplayName</key>
-		<string>HelloBible+</string>
+		<string>HelloBible</string>
 		<key>CFBundleExecutable</key>
 		<string>$(EXECUTABLE_NAME)</string>
 		<key>CFBundleIdentifier</key>
@@ -15,7 +15,7 @@
 		<key>CFBundleInfoDictionaryVersion</key>
 		<string>6.0</string>
 		<key>CFBundleName</key>
-		<string>HelloBible +</string>
+		<string>HelloBible</string>
 		<key>CFBundlePackageType</key>
 		<string>APPL</string>
 		<key>CFBundleShortVersionString</key>
@@ -57,7 +57,7 @@
         <key>FacebookClientToken</key>
         <string>240acc55d8d7ec9552b2acff8fa142e2</string>
         <key>FacebookDisplayName</key>
-        <string>HelloBible+</string>
+        <string>HelloBible</string>
         <key>LSApplicationQueriesSchemes</key>
         <array>
           <string>fbapi</string>
