--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ dependencies:
   measure_size: ^4.0.0
   carousel_slider: ^4.2.1
   flutter_keyboard_visibility: ^5.4.1
+  flutter_svg_provider: ^1.0.4
 
 dev_dependencies:
   flutter_test:
